--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,13 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'GangwonEdu_OTFBoldA';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/GangwonEdu_OTFBoldA.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -28,6 +35,14 @@ body {
 
 .font-jaram {
     font-family: "iceJaram-Rg";
+}
+
+.font-gangwon {
+    font-family: 'GangwonEdu_OTFBoldA';
+}
+
+.font-nanum {
+    font-family: 'NanumSquareNeo-Variable';
 }
 
 @media (max-width:920px) {
